--- a/aboutme.html
+++ b/aboutme.html
@@ -18,6 +18,7 @@
     <a href="#section-1" class="dot"></a>
     <a href="#section-2" class="dot"></a>
     <a href="#section-3" class="dot"></a>
+    <a href="#section-4" class="dot"></a>
   </div>
   <div class="about-first-section">
     <div class="about-first-text">
@@ -129,6 +130,42 @@
         <img src="/images/pr.png" alt="image of the premiere pro logo" class="skill-img">
         <p>Premiere Pro</p>
       </div>
+    </div>
+  </div>
+  <hr style="margin-top: 3%; width: 55%; margin-bottom: 3%;">
+  <div class="sprachen">
+    <h2 id="section-4">Sprachkenntnisse</h2>
+    <h3>Deutsch</h3>
+    <div class="each-lang">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+    </div>
+    <h3>Serbisch</h3>
+    <div class="each-lang">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+    </div>
+    <h3>Englisch</h3>
+    <div class="each-lang">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/half-star.svg" alt="icon of a half star">
+    </div>
+    <h3>Französisch</h3>
+    <div class="each-lang">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/star.svg" alt="icon of a star">
+      <img src="/icons/empty-star.svg" alt="icon of an empty star">
+      <img src="/icons/empty-star.svg" alt="icon of an empty star">
+      <img src="/icons/empty-star.svg" alt="icon of an empty star">
     </div>
   </div>
   <footer>
