--- a/contact.html
+++ b/contact.html
@@ -15,18 +15,12 @@
     <a href="contact.html" class="active">KONTAKT</a>
   </header>
   <div class="kontakt-formular">
-    <form action="https://formsubmit.co/mickom2005@gmail.com" method="POST" />
-          <label for="name">Absender:</label>
-          <input type="text" id="name" name="name" required class="formular-feld" placeholder="Ihr Name">
-      
-          <label for="email">E-Mail Adresse:</label>
-          <input type="email" id="email" name="email" required class="formular-feld" placeholder="Ihre E-Mail Adresse">
-      
-          <label for="message">Nachricht:</label>
-          <textarea id="message" name="message" required class="formular-feld" placeholder="Ihre Nachricht"></textarea>
-
-          <button type="submit" class="send">> senden</button>
-        </form>
+        <form action="https://formspree.io/f/maygnnpv" method="POST">
+        <label> Name: <input type="text" name="name" class="formular-feld" placeholder="Wie lautet Ihr Name?"></label>
+        <label> E-Mail Adresse: <input type="email" name="email" class="formular-feld" placeholder="Wie lautet Ihre E-Mail Adresse?"></label>
+        <label> Ihre Nachtricht: <textarea name="message" class="formular-feld" id="message" placeholder="Wie lautet Ihre Nachricht?"></textarea></label>
+        <button type="submit" class="senc">> senden</button>
+</form>
   </div>
   <footer>
     <div class="kontakt">
