--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,18 @@
 </head>
 <body>
   <header>
+    <div class="desktop-nav">
     <a href="index.html">HOME</a>
     <a href="aboutme.html">ÜBER MICH</a>
     <a href="projects.html">PROJEKTE</a>
     <a href="contact.html" class="active">KONTAKT</a>
+  </div>
+    <div class="phone-nav">
+      <a href="index.html"><img src="/icons/home.svg" alt="home icon"></a>
+      <a href="aboutme.html"><img src="/icons/info.svg" alt="about icon"></a>
+      <a href="projects.html"><img src="/icons/projects.svg" alt="file icon"></a>
+      <a href="contact.html"><img src="/icons/mail.svg" alt="gmail icon" class="active"></a>
+    </div>
   </header>
   <div class="kontakt-formular">
         <form action="https://formspree.io/f/maygnnpv" method="POST">
