--- a/projects.html
+++ b/projects.html
@@ -9,10 +9,18 @@
 </head>
 <body>
   <header id="section-1">
+    <div class="desktop-nav">
     <a href="index.html">HOME</a>
     <a href="aboutme.html">ÜBER MICH</a>
     <a href="projects.html" class="active">PROJEKTE</a>
     <a href="contact.html">KONTAKT</a>
+  </div>
+    <div class="phone-nav">
+      <a href="index.html"><img src="/icons/home.svg" alt="home icon"></a>
+      <a href="aboutme.html"><img src="/icons/info.svg" alt="about icon"></a>
+      <a href="projects.html"><img src="/icons/projects.svg" alt="file icon" class="active"></a>
+      <a href="contact.html"><img src="/icons/mail.svg" alt="gmail icon"></a>
+    </div>
   </header>
 
   <div class="dots">
